[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Fonts/arial_narrow_7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://4ImagesChoix/cookie1.png" type="Texture" id=2]
[ext_resource path="res://4ImagesChoix/cookie3.png" type="Texture" id=3]
[ext_resource path="res://4ImagesChoix/cookie4.png" type="Texture" id=4]
[ext_resource path="res://4ImagesChoix/cookie2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/ChoixImage.gd" type="Script" id=6]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/topleft = Color( 0.47451, 0.843137, 0.988235, 1 )
shader_param/topright = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomleft = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomright = Color( 0.627451, 0.807843, 0.827451, 1 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0588235, 0.0509804, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0470588, 0.0352941, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0352941, 0.0313726, 0.0313726, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.619608, 0.443137, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.388235, 0.396078, 0.713726, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )

[node name="ChoixImage" type="Control"]
anchor_left = 0.296
anchor_top = 0.204
anchor_right = 0.296
anchor_bottom = 0.204
margin_left = -304.104
margin_top = -121.4
margin_right = -264.104
margin_bottom = -81.4
script = ExtResource( 6 )

[node name="ColorRect" type="Panel" parent="."]
material = SubResource( 3 )
anchor_left = 7.6
anchor_top = 4.175
anchor_right = 7.6
anchor_bottom = 4.175
margin_left = 20.0
margin_top = -117.0
margin_right = 420.0
margin_bottom = 333.0
theme = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 324.0
margin_top = 50.0
margin_right = 725.0
margin_bottom = 96.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
visible_characters = 300
text = "  Choisissez votre dessin"

[node name="Image1" type="Button" parent="."]
margin_left = 332.0
margin_top = 103.0
margin_right = 524.0
margin_bottom = 293.0
custom_styles/pressed = SubResource( 10 )
icon = ExtResource( 2 )

[node name="Image2" type="Button" parent="."]
margin_left = 527.0
margin_top = 102.0
margin_right = 719.0
margin_bottom = 292.0
custom_styles/pressed = SubResource( 11 )
icon = ExtResource( 5 )

[node name="Image3" type="Button" parent="."]
margin_left = 330.0
margin_top = 302.0
margin_right = 522.0
margin_bottom = 492.0
custom_styles/pressed = SubResource( 12 )
icon = ExtResource( 3 )

[node name="Image4" type="Button" parent="."]
margin_left = 525.0
margin_top = 303.0
margin_right = 717.0
margin_bottom = 493.0
custom_styles/pressed = SubResource( 13 )
icon = ExtResource( 4 )

[node name="OKButton" type="Button" parent="."]
margin_left = 471.0
margin_top = 273.0
margin_right = 579.0
margin_bottom = 325.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "OK"

[connection signal="pressed" from="Image1" to="." method="_on_Image1_pressed"]
[connection signal="pressed" from="Image2" to="." method="_on_Image2_pressed"]
[connection signal="pressed" from="Image3" to="." method="_on_Image3_pressed"]
[connection signal="pressed" from="Image4" to="." method="_on_Image4_pressed"]
[connection signal="pressed" from="OKButton" to="." method="_on_OKButton_pressed"]
