extends Control



func _on_OKButton_pressed():
	 visible = false


func _on_Image1_pressed():
	pass # Replace with function body.


func _on_Image2_pressed():
	pass # Replace with function body.


func _on_Image3_pressed():
	pass # Replace with function body.


func _on_Image4_pressed():
	pass # Replace with function body.
